src/main/java/assembler/grammar/assemblerParser.java
// Generated from E:/My Code/java/cpu32e2_assembler/src/main/java/assembler/grammar\assembler.g4 by ANTLR 4.7
package assembler.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class assemblerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALIGN=1, ORIGIN=2, FUNCTION=3, ENDFUNCTION=4, CONST=5, ENDCONST=6, DATA=7, 
		ENDDATA=8, DATATYPE=9, OR0=10, OSR1=11, ORS1=12, OI1=13, IR=14, RI2=15, 
		OR2=16, RI3=17, OI3=18, OR4=19, BR=20, LD=21, ST=22, REG=23, SYSREG=24, 
		MTYPE=25, INCTYPE=26, COND=27, LABEL=28, ID=29, DNUM=30, HNUM=31, BNUM=32, 
		PLUS=33, MINUS=34, NOT=35, MULTIPLY=36, DIVIDE=37, MODULUS=38, SHIFTLEFT=39, 
		SHIFTRIGHT=40, SHIFTRIGHTARITH=41, AND=42, XOR=43, OR=44, COMMA=45, LBRACKET=46, 
		RBRACKET=47, EQUALS=48, LPAREN=49, RPAREN=50, NEWLINE=51, CHAR=52, STRING=53, 
		SINGLE_CMNT=54, COMMENT=55, WHITESPACE=56, FILEEND=57;
	public static final int
		RULE_input = 0, RULE_block = 1, RULE_codeLabel = 2, RULE_masterLine = 3, 
		RULE_end = 4, RULE_value = 5, RULE_expression = 6, RULE_atom = 7, RULE_origin = 8, 
		RULE_align = 9, RULE_functionBlock = 10, RULE_functionLine = 11, RULE_constBlock = 12, 
		RULE_constLine = 13, RULE_constDecl = 14, RULE_dataBlock = 15, RULE_dataLine = 16, 
		RULE_dataDecl = 17, RULE_dataEntries = 18, RULE_dataArray = 19, RULE_dataValue = 20, 
		RULE_inst = 21, RULE_imm = 22;
	public static final String[] ruleNames = {
		"input", "block", "codeLabel", "masterLine", "end", "value", "expression", 
		"atom", "origin", "align", "functionBlock", "functionLine", "constBlock", 
		"constLine", "constDecl", "dataBlock", "dataLine", "dataDecl", "dataEntries", 
		"dataArray", "dataValue", "inst", "imm"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'align'", "'origin'", "'function'", "'endfunction'", "'const'", 
		"'endconst'", "'data'", "'enddata'", null, null, "'ssr'", "'lsr'", "'int'", 
		"'iret'", null, "'not'", null, "'mui'", null, null, "'ld'", "'st'", null, 
		null, null, null, null, null, null, null, null, null, "'+'", "'-'", "'~'", 
		"'*'", "'/'", "'%'", "'<<'", "'>>'", "'>>>'", "'&'", "'^'", "'|'", "','", 
		"'['", "']'", "'='", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ALIGN", "ORIGIN", "FUNCTION", "ENDFUNCTION", "CONST", "ENDCONST", 
		"DATA", "ENDDATA", "DATATYPE", "OR0", "OSR1", "ORS1", "OI1", "IR", "RI2", 
		"OR2", "RI3", "OI3", "OR4", "BR", "LD", "ST", "REG", "SYSREG", "MTYPE", 
		"INCTYPE", "COND", "LABEL", "ID", "DNUM", "HNUM", "BNUM", "PLUS", "MINUS", 
		"NOT", "MULTIPLY", "DIVIDE", "MODULUS", "SHIFTLEFT", "SHIFTRIGHT", "SHIFTRIGHTARITH", 
		"AND", "XOR", "OR", "COMMA", "LBRACKET", "RBRACKET", "EQUALS", "LPAREN", 
		"RPAREN", "NEWLINE", "CHAR", "STRING", "SINGLE_CMNT", "COMMENT", "WHITESPACE", 
		"FILEEND"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "assembler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public assemblerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InputContext extends ParserRuleContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				block();
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALIGN) | (1L << ORIGIN) | (1L << FUNCTION) | (1L << CONST) | (1L << DATA) | (1L << DATATYPE) | (1L << OR0) | (1L << OSR1) | (1L << ORS1) | (1L << OI1) | (1L << IR) | (1L << RI2) | (1L << OR2) | (1L << RI3) | (1L << OI3) | (1L << OR4) | (1L << BR) | (1L << LD) | (1L << ST) | (1L << LABEL) | (1L << NEWLINE) | (1L << FILEEND))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public FunctionBlockContext functionBlock() {
			return getRuleContext(FunctionBlockContext.class,0);
		}
		public DataBlockContext dataBlock() {
			return getRuleContext(DataBlockContext.class,0);
		}
		public ConstBlockContext constBlock() {
			return getRuleContext(ConstBlockContext.class,0);
		}
		public List<MasterLineContext> masterLine() {
			return getRuleContexts(MasterLineContext.class);
		}
		public MasterLineContext masterLine(int i) {
			return getRuleContext(MasterLineContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				{
				setState(51);
				functionBlock();
				}
				break;
			case DATA:
				{
				setState(52);
				dataBlock();
				}
				break;
			case CONST:
				{
				setState(53);
				constBlock();
				}
				break;
			case ALIGN:
			case ORIGIN:
			case DATATYPE:
			case OR0:
			case OSR1:
			case ORS1:
			case OI1:
			case IR:
			case RI2:
			case OR2:
			case RI3:
			case OI3:
			case OR4:
			case BR:
			case LD:
			case ST:
			case LABEL:
			case NEWLINE:
			case FILEEND:
				{
				setState(55); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(54);
						masterLine();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(57); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeLabelContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(assemblerParser.LABEL, 0); }
		public CodeLabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeLabel; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitCodeLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeLabelContext codeLabel() throws RecognitionException {
		CodeLabelContext _localctx = new CodeLabelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_codeLabel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(LABEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MasterLineContext extends ParserRuleContext {
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public CodeLabelContext codeLabel() {
			return getRuleContext(CodeLabelContext.class,0);
		}
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public DataDeclContext dataDecl() {
			return getRuleContext(DataDeclContext.class,0);
		}
		public OriginContext origin() {
			return getRuleContext(OriginContext.class,0);
		}
		public AlignContext align() {
			return getRuleContext(AlignContext.class,0);
		}
		public MasterLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_masterLine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitMasterLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MasterLineContext masterLine() throws RecognitionException {
		MasterLineContext _localctx = new MasterLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_masterLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL) {
				{
				setState(63);
				codeLabel();
				}
			}

			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OR0:
			case OSR1:
			case ORS1:
			case OI1:
			case IR:
			case RI2:
			case OR2:
			case RI3:
			case OI3:
			case OR4:
			case BR:
			case LD:
			case ST:
				{
				setState(66);
				inst();
				}
				break;
			case DATATYPE:
				{
				setState(67);
				dataDecl();
				}
				break;
			case ORIGIN:
				{
				setState(68);
				origin();
				}
				break;
			case ALIGN:
				{
				setState(69);
				align();
				}
				break;
			case NEWLINE:
			case FILEEND:
				break;
			default:
				break;
			}
			setState(72);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(assemblerParser.NEWLINE, 0); }
		public TerminalNode FILEEND() { return getToken(assemblerParser.FILEEND, 0); }
		public EndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndContext end() throws RecognitionException {
		EndContext _localctx = new EndContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_end);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==FILEEND) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode DNUM() { return getToken(assemblerParser.DNUM, 0); }
		public TerminalNode HNUM() { return getToken(assemblerParser.HNUM, 0); }
		public TerminalNode BNUM() { return getToken(assemblerParser.BNUM, 0); }
		public TerminalNode CHAR() { return getToken(assemblerParser.CHAR, 0); }
		public TerminalNode ID() { return getToken(assemblerParser.ID, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << DNUM) | (1L << HNUM) | (1L << BNUM) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElementContext extends ExpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public ElementContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public BinaryContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitBinary(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryContext extends ExpressionContext {
		public Token op;
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public UnaryContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assemblerVisitor ) return ((assemblerVisitor<? extends T>)visitor).visitUnary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
			case MINUS:
			case NOT:
				{
				_localctx = new UnaryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(79);
				((UnaryContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << NOT))) != 0)) ) {
					((UnaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(80);
				atom();
				}
				break;
			case ID:
			case DNUM:
			case HNUM:
			case BNUM:
			case LPAREN:
			case CHAR:
				{
				_localctx = new ElementContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(81);
				atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(102);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new BinaryContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(84);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(85);
						((BinaryContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULTIPLY) | (1L << DIVIDE) | (1L << MODULUS))) != 0)) ) {
							((BinaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(86);
						expression(8);
						}
						break;
					case 2:
						{
						_localctx = new BinaryContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(87);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(88);
						((BinaryContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((BinaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(89);
						expression(7);
						}
						break;
					case 3:
						{
						_localctx = new BinaryContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(90);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(91);
						((BinaryContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SHIFTLEFT) | (1L << SHIFTRIGHT) | (1L << SHIFTRIGHTARITH))) != 0)) ) {
							((BinaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(92);
						expression(6);
						}
						break;
					case 4:
						{
						_localctx = new BinaryContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(93);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(94);
						((BinaryContext)_localctx).op = match(AND);
						setState(95);
						expression(5);
						}
						break;
					case 5:
						{
						_localctx = new BinaryContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(96);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(97);
						((BinaryContext)_localctx).op = match(XOR);
						setState(98);
						expression(4);
						}
						break;
					case 6:
						{
						_localctx = new BinaryContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(99);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(100);
						((BinaryContext)_localctx).op = match(OR);
						setState(101);
						expression(3);
						}
						break;
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
